objects/Forecast_History__c.object
<CustomObject>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Reject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Reject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Forecast Historys</relationshipLabel>
        <relationshipName>Forecast_Historys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Part</label>
        <referenceTo>Opportunity_Part__c</referenceTo>
        <relationshipLabel>Forecast Historys</relationshipLabel>
        <relationshipName>Forecast_Historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Forecast History</label>
    <nameField>
        <label>Forecast History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Historys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>